--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
-html, body {
+body, html {
   height: 100%;
   width: 100%;
   font-family: 'Poppins', sans-serif;
@@ -12,17 +12,14 @@ html, body {
 .navbar-nav li {
 padding-right: 20px;
 }
+
 .nav-link {
   font-size: 1.1em !important;
 }
+
 .carousel-inner img {
   width: 100%;
   height: 100%;
-}
-.banner img{
-  width: 100%;
-  display: block;
-  height: 10%;
 }
 
 .carousel-caption {
@@ -48,6 +45,303 @@ padding-right: 20px;
 .btn-primary:hover {
   background-color: #563dcc;
   border: 1px solid #563dcc;
+}
+.banner-image {
+  background-repeat: no-repeat;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+/* contact */
+#contact .banner-image {
+  background-repeat: no-repeat;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
+}
+#contact {
+  margin-top: 80px;
+
+}
+
+.txtb {
+  border: 1px solid gray;
+  margin: 8px 0;
+  padding: 12px 18px;
+  border-radius: 8px;
+}
+.txtb label {
+  display: block;
+  text-align: left;
+  color: white;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+.txtb input,.txtb textarea {
+  width: 100%;
+  border: none;
+  background: none;
+  outline: none;
+  font-size: 18px;
+  margin-top: 6px;
+}
+.btn-tertiary {
+  display: inline-block;
+  background-color: white;
+  color: black;
+  border: 2px solid mediumpurple;
+  padding: 14px 0;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin-top: 8px;
+  width: 50%;
+}
+/* services */
+#services .card{
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 100px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+#services .card-title {
+  font-size: 150%;
+}
+#vaservices .card{
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 35px;
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+#wordpress img {
+  height: 400px;
+  width: 700px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#wordpress h3 {
+  text-align: center;
+}
+#wpcontainer {
+  margin-top: 20px;
+}
+#landingpage1 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+
+#landingpage1 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage2 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage2 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage3 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage3 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage4 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage4 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage5 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage5 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage6 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage6 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage7 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage7 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage8 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage8 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage9 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage9 {
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+#landingpage10 img {
+  height: 300px;
+  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#landingpage10 {
+  margin-top: 60px;
+  margin-bottom: 50px;
+}
+#pokemon {
+  margin-top: 60px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#selectors {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#photogrid {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#pattern {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#myboard {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#myblog {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#index2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#gallery {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#stalker {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#museum {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#game {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#calc {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#forLoops {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#functionproblemset
+{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#arraysolution {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+#todolist2 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 .jumbotron {
   padding: 1rem;
@@ -101,9 +395,13 @@ padding-right: 20px;
   max-width: 100%;
 }
 .social a {
-  font-size: 4.5em;
-  padding: 3rem;
+  font-size: 3em;
+  padding: 2rem;
 }
+/* #contact .social a {
+  font-size: 3em;
+  padding: 3rem;
+} */
 .fa-facebook {
   color: #3b5998;
 }
@@ -146,15 +444,6 @@ hr.light-100 {
   margin-top: .8rem;
   margin-bottom: 1rem;
 }
-}
-
-
-
-
-
-
-
-
 
 /*---Media Queries --*/
 @media (max-width: 992px) {
@@ -187,6 +476,9 @@ hr.light-100 {
     font-size: 2.5em;
     padding: 1.2rem;
 }
+#services .card-title {
+  font-size: 100%;
+}
 @media (max-width: 576px) {
   .carousel-caption {
     top: 40%;
@@ -211,8 +503,8 @@ hr.light-100 {
     font-size: 2rem;
     padding: .7rem;
 }
-
-}
+#services .card-title {
+  font-size: 150%;
 
 /*---Firefox Bug Fix --*/
 .carousel-item {
